CH-10: add event logs data
